--- a/less/theme.less
+++ b/less/theme.less
@@ -232,7 +232,8 @@ article#content {
 	.make-sm-column(3);
 	// border-left: 1px dotted lighten(@charcoal, 65%);
 }
-.full-width.subpage {
+.full-width.subpage,
+.full-width.event-detail {
 	.main {
 		.make-sm-column(12);
 		// .make-sm-column-push(1);
@@ -1150,244 +1151,7 @@ article {
 	}
 }
 
-// ----------------------------------------------------------- Events
-
-.event {
-	
-	.tab-pane {
-		padding-top: @grid-gutter-width;
-	}
-	
-}
-.upcoming-events {
-	h2 {
-		background-color: #fff;
-	}
-	h3 {
-		font-size: 34px;
-		color: #ddd;
-		background: #fff;
-		z-index: 999999;
-		display: block;
-		position: relative;
-		margin:0;
-		padding: @grid-gutter-width/2 0 10px;
-		border-bottom: 1px solid #ddd;
-	}
-	.city-date {
-		.pipe {
-			margin-left: 5px;
-			margin-right: 5px;
-		}
-	}
-}
-.events-stack {
-	position: relative;
-	padding-top: @grid-gutter-width/2;
-	padding-bottom: @grid-gutter-width/2;
-	@media (min-width: @screen-sm-min) {
-		&:after {
-			content: "";
-			display: block;
-			position: absolute;
-			left: 50%;
-			height: 100%;
-			width: 1px;
-			background: #E3E2E4;
-			top:0;
-			z-index: 0;
-		}
-	}
-	.event {
-		display: block;
-		padding: 20px 30px;
-		&:before {
-			content: "";
-			border: 2px solid #DDD;
-			width: 16px;
-			height: 16px;
-			display: block;
-			background-color: #fff;
-			z-index: 1;
-			left:-8px;
-			top: 30px;
-			position: absolute;
-			border-radius: 16px;
-		}
-		@media (min-width: @screen-sm-min) {
-			margin-bottom: @grid-gutter-width;
-		}
-		border-bottom: 1px solid #E3E2E4;
-		h4, p {
-			margin: 0;
-		}
-		h4 {
-			font-size: 1.7em;
-			line-height: 1.3em;
-			.font-serif-heavy;
-			
-			> a {
-				> i {
-					color: #ccc;
-					margin-left: 4px;
-					font-size: 14px;
-				}
-				&:hover {
-					> i {
-						color: @brand-danger;
-					}
-				}
-			}
-		}
-		p {
-			.font-sans;
-			color: #999;
-		}
-		@media (min-width: @screen-sm-min) {
-			width: 50%;
-			left: 50%;
-			position: relative;
-			margin-top: -80px;
-		}
-		&:first-child {
-			margin-top:0;
-		}
-		@media (min-width: @screen-sm-min) {
-			&:nth-child(even) {
-				margin-left: -50%;
-				text-align: right;
-				&:before {
-					left: auto;
-					right: -8px;
-				}
-			}
-		}
-	}
-}
-.speakers {
-	.make-row;
-	text-align: center;
-	@media (min-width: @screen-sm-min) {
-		padding-left: @grid-gutter-width;
-		padding-right: @grid-gutter-width;
-	}
-	.speaker {
-		padding-bottom: @grid-gutter-width*2;
-		.make-xs-column(12);
-		.make-sm-column(4);
-		.make-lg-column(3);
-		// @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-		// 	&:nth-child(2n+1) {
-		// 		clear: both;
-		// 	}
-		// }
-		// @media (min-width: @screen-lg-min) {
-		// 	&:nth-child(3n+1) {
-		// 		clear: both;
-		// 	}
-		// }
-		.speaker-photo {
-			text-align: center;
-		}
-		.speaker-info {
-			// @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-			// 	min-height: 150px;
-			// }
-			p {
-				display: none;
-			}
-			// @media (min-width: @screen-lg-min) {
-			// 	min-height: 160px;
-			// }
-		}
-		.btn-default {
-			border: 1px solid @gray3;
-			.box-shadow(none);
-			color: @text-color;
-			font-size: 14px;
-			.sans-upper;
-			margin: 0 auto;
-			display: none;
-			&:hover {
-				border-color: @text-color;
-				background-color: transparent;
-			}
-		}
-	}
-}
-
-.event-detail {
-	background: #fff;
-	.container {
-		background: transparent;
-	}
-	#header_wrap {
-		.container {
-			background-color: transparent;
-		}
-	}
-	.site-header {
-		.navbar-default {
-			.navbar-nav {
-				padding-bottom: 0;
-			}
-		}
-	}
-	.jumbotron {
-		background-color: #333;
-		color: #fff;
-		text-align: center;
-		padding: @grid-gutter-width*3 0;
-		h1 {
-			font-size: 3.8em;
-			@media (max-width: @screen-xs-max) {
-				font-size: 2.5em;
-			}
-		}
-		.subtitle {
-			font-size: 1.8em;
-			color: #ccc;
-			line-height: 1.3em;
-			margin-bottom: 1em;
-			@media (max-width: @screen-xs-max) {
-				font-size: 1.2em;
-			}
-		}
-		.btn-lg {
-			min-width: 300px;
-			border: none;
-			.font-sans;
-			margin-bottom: 0;
-		}
-	}
-	.section {
-		padding-top: @grid-gutter-width;
-		padding-bottom: @grid-gutter-width;
-	}
-	h2 {
-		font-size: 50px;
-		padding-top: @grid-gutter-width !important;
-		padding-bottom: @grid-gutter-width;
-	}
-	#intro {
-		.make-xs-column(12);
-		.make-md-column(8);
-		.make-md-column-offset(2);
-	}
-}
-
-.question {
-	margin-bottom: 0;
-}
-.answer {
-	margin-top: 0;
-}
-
-#schedule-content {
-	p {
-		margin-bottom: 0;
-	}
-}
+@import "events.less";
 
 
 // ----------------------------------------------------------- Index Date
