--- a/css/theme.css
+++ b/css/theme.css
@@ -10276,7 +10276,7 @@ a.resource-list .resource-tags a:focus {
     padding-left: 10px;
     padding-right: 10px;
   }
-  .speakers .speaker:nth-child(2n+1) {
+  .speakers .speaker:nth-child(3n+1) {
     clear: both;
   }
 }
@@ -10287,9 +10287,8 @@ a.resource-list .resource-tags a:focus {
   }
 }
 .speakers .speaker {
-  padding-bottom: 40px;
   float: left;
-  width: 50%;
+  width: 33.33333333%;
   position: relative;
   min-height: 1px;
   padding-left: 20px;
@@ -10298,16 +10297,24 @@ a.resource-list .resource-tags a:focus {
 @media (min-width: 768px) {
   .speakers .speaker {
     float: left;
-    width: 16.66666667%;
+    width: 25%;
   }
 }
-@media (min-width: 1250px) {
+@media (min-width: 992px) {
   .speakers .speaker {
     float: left;
     width: 16.66666667%;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 991px) {
+  .speakers .speaker:nth-child(4n+1) {
+    clear: both;
+  }
+}
+@media (min-width: 992px) {
+  .speakers .speaker {
+    padding-bottom: 40px;
+  }
   .speakers .speaker:nth-child(6n+1) {
     clear: both;
   }
@@ -10322,8 +10329,13 @@ a.resource-list .resource-tags a:focus {
   display: inline-block;
 }
 .speakers .speaker .speaker-info h3 {
-  line-height: 1.2em;
+  line-height: 1.1em;
   font-size: 20px;
+}
+@media (max-width: 991px) {
+  .speakers .speaker .speaker-info h3 {
+    margin-top: 5px;
+  }
 }
 .speakers .speaker .speaker-info h3 a {
   color: inherit;
