--- a/less/events.less
+++ b/less/events.less
@@ -115,7 +115,7 @@
 		padding-left: 10px;
 		padding-right: 10px;
 		.speaker {
-			&:nth-child(2n+1) {
+			&:nth-child(3n+1) {
 				clear: both;
 			}
 		}
@@ -125,11 +125,19 @@
 		padding-right: @grid-gutter-width;
 	}
 	.speaker {
-		padding-bottom: @grid-gutter-width;
-		.make-xs-column(6);
-		.make-sm-column(2);
-		.make-lg-column(2);
-		@media (min-width: @screen-sm-min) {
+		
+		.make-xs-column(4);
+		.make-sm-column(3);
+		.make-md-column(2);
+
+		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+			&:nth-child(4n+1) {
+				clear: both;
+			}
+		}
+		@media (min-width: @screen-md-min) {
+			padding-bottom: @grid-gutter-width;
+
 			&:nth-child(6n+1) {
 				clear: both;
 			}
@@ -146,7 +154,10 @@
 			// 	min-height: 150px;
 			// }
 			h3 {
-				line-height: 1.2em;
+				line-height: 1.1em;
+				@media (max-width: @screen-sm-max) {
+					margin-top: 5px;
+				}
 				font-size: 20px;
 				a {
 					color: inherit;
