--- a/css/theme.css
+++ b/css/theme.css
@@ -10407,7 +10407,10 @@ a.resource-list .resource-tags a:focus {
 }
 .event-detail .jumbotron {
   background-color: #333;
-  background-size: cover;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-size: cover !important;
   color: #fff;
   text-align: center;
   padding: 200px 0 80px;
