--- a/less/events.less
+++ b/less/events.less
@@ -239,7 +239,10 @@
 	}
 	.jumbotron {
 		background-color: #333;
-		background-size: cover;
+		-webkit-background-size: cover !important;
+ 		-moz-background-size: cover !important;
+ 		-o-background-size: cover !important;
+ 		background-size: cover !important;
 		color: #fff;
 		text-align: center;
 		padding: @grid-gutter-width*5 0 @grid-gutter-width*2;
