--- a/less/events.less
+++ b/less/events.less
@@ -325,6 +325,7 @@
 	.section {
 		padding-top: @grid-gutter-width;
 		padding-bottom: @grid-gutter-width;
+		position: relative;
 	}
 	h2 {
 		font-size: 60px;
@@ -409,4 +410,9 @@
 	p {
 		margin-bottom: 0;
 	}
+}
+
+.marker {
+	position: absolute;
+	top: -80px;
 }
