--- a/css/theme.css
+++ b/css/theme.css
@@ -10516,11 +10516,18 @@ a.resource-list .resource-tags a:focus {
   background-color: #f9f9f9;
 }
 .event-detail #schedule {
-  background: url(/img/event-schedule-bg.jpg) fixed center center no-repeat;
+  background: url(/img/event-schedule-bg2.jpg) fixed center center no-repeat;
   background-size: cover;
   font-size: 120%;
 }
+.event-detail #schedule .section-header {
+  color: #fff;
+}
+.event-detail #schedule .section-header h2 {
+  color: #fff;
+}
 .event-detail #schedule .lead {
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -10545,6 +10552,9 @@ a.resource-list .resource-tags a:focus {
     padding: 40px 80px 80px;
   }
 }
+.event-detail #schedule h2 {
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
 .event-detail #schedule h3 {
   text-transform: uppercase;
   font-weight: 800;
@@ -10561,6 +10571,8 @@ a.resource-list .resource-tags a:focus {
 }
 .event-detail #register {
   background-color: #f9f9f9;
+  background: url(/img/event-schedule-bg.jpg) fixed center center no-repeat;
+  background-size: cover;
   margin-bottom: 0;
 }
 .event-detail footer {
