--- a/less/events.less
+++ b/less/events.less
@@ -337,10 +337,17 @@
 		background-color: #f9f9f9;
 	}
 	#schedule {
-		background: url(/img/event-schedule-bg.jpg) fixed center center no-repeat;
+		background: url(/img/event-schedule-bg2.jpg) fixed center center no-repeat;
 		background-size: cover;
 		font-size: 120%;
+		.section-header {
+			color: #fff;
+			h2 {
+				color: #fff;
+			}
+		}
 		.lead {
+			text-shadow: 0 0 20px rgba(0,0,0,.3);
 			// color: #fff;
 			// text-shadow: 0 0 3px rgba(0,0,0,.3);
 			@media (max-width: @screen-sm-max) {
@@ -361,6 +368,9 @@
 				padding: @grid-gutter-width @grid-gutter-width*2 @grid-gutter-width*2;
 			}
 		}
+		h2 {
+			text-shadow: 0 0 20px rgba(0,0,0,.3);
+		}
 		h3 {
 			text-transform: uppercase;
 			font-weight: 800;
@@ -376,6 +386,8 @@
 	}
 	#register {
 		background-color: #f9f9f9;
+		background: url(/img/event-schedule-bg.jpg) fixed center center no-repeat;
+		background-size: cover;
 		margin-bottom: 0;
 	}
 	footer {
