--- a/less/events.less
+++ b/less/events.less
@@ -326,6 +326,12 @@
 		padding-top: @grid-gutter-width;
 		padding-bottom: @grid-gutter-width;
 		position: relative;
+		.section-header.inverse {
+			color: #fff;
+			h2 {
+				color: #fff !important;
+			}
+		}
 	}
 	h2 {
 		font-size: 60px;
@@ -340,12 +346,7 @@
 		background: url(/img/event-schedule-bg2.jpg) fixed center center no-repeat;
 		background-size: cover;
 		font-size: 120%;
-		.section-header {
-			color: #fff;
-			h2 {
-				color: #fff;
-			}
-		}
+		
 		.lead {
 			text-shadow: 0 0 20px rgba(0,0,0,.3);
 			// color: #fff;
@@ -386,7 +387,7 @@
 	}
 	#register {
 		background-color: #f9f9f9;
-		background: url(/img/event-schedule-bg.jpg) fixed center center no-repeat;
+		background: url(/img/event-register-bg2.jpg) fixed center center no-repeat;
 		background-size: cover;
 		margin-bottom: 0;
 	}
