--- a/less/events.less
+++ b/less/events.less
@@ -200,8 +200,15 @@
 	.container {
 		background: transparent;
 		&.narrow {
-			max-width: 767px;
+			@media (min-width: @screen-sm-min) {
+				max-width: 767px;
+			}
+			
+			@media (max-width: @screen-xs-max) {
+				max-width: 85%;
+			}
 		}
+
 	}
 	#header_wrap {
 		.container {
@@ -245,8 +252,16 @@
  		background-size: cover !important;
 		color: #fff;
 		text-align: center;
-		padding: @grid-gutter-width*5 0 @grid-gutter-width*2;
+		padding: @grid-gutter-width*5 10px @grid-gutter-width*2;
 		margin-bottom: 0;
+		> div {
+			
+			@media (max-width: @screen-xs-max) {
+				max-width: 90%;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
 		@media (max-width: @screen-xs-max) {
 			padding-top: @grid-gutter-width*3;
 		}
@@ -258,6 +273,7 @@
 			z-index: 1;
 			display: block;
 		}
+
 		.back {
 			position: absolute;
 			top: 100px;
@@ -276,19 +292,24 @@
 			&:hover {
 				.opacity(1);
 			}
+			@media (max-width: @screen-xs-max) {
+				top: 10px;
+				left: 40px;
+			}
 		}
 		.pre-title {
 			.font-sans;
 			text-transform: uppercase;
 			font-weight: 200;
 			letter-spacing: 1px;
+			line-height: 1;
 		}
 		h1 {
 			font-size: 9em;
 			font-weight: 800;
 			text-transform: uppercase;
 			@media (max-width: @screen-xs-max) {
-				font-size: 2.5em;
+				font-size: 3.5em;
 			}
 		}
 		.subtitle {
