--- a/css/theme.css
+++ b/css/theme.css
@@ -10608,6 +10608,20 @@ a.resource-list .resource-tags a:focus {
   background-size: cover;
   margin-bottom: 0;
 }
+.event-detail #register .iframe-container {
+  border-radius: 5px;
+  background: #fff;
+}
+@media (max-width: 767px) {
+  .event-detail #register .iframe-container {
+    height: 410px;
+  }
+}
+@media (min-width: 992px) {
+  .event-detail #register .iframe-container {
+    height: 323px;
+  }
+}
 .event-detail footer {
   background-color: #333;
   margin-top: 0;
