--- a/less/events.less
+++ b/less/events.less
@@ -422,6 +422,17 @@
 		background: url(/img/event-register-bg4.jpg) fixed center center no-repeat;
 		background-size: cover;
 		margin-bottom: 0;
+		.iframe-container {
+			border-radius: 5px;
+			background: #fff;
+			@media (max-width: @screen-xs-max) {
+				height: 410px;
+			}
+			@media (min-width: @screen-md-min) {
+				height: 323px;
+			}
+
+		}
 	}
 	footer {
 		background-color: #333;
