--- a/less/events.less
+++ b/less/events.less
@@ -1,5 +1,17 @@
 // ----------------------------------------------------------- Events
 
+.events {
+	.hero-image {
+		@media (max-width: @screen-md-max) {
+				margin-left: -@grid-gutter-width/1.5;
+				margin-right: -@grid-gutter-width/1.5;
+				
+			}
+		img {
+
+		}
+	}
+}
 
 .upcoming-events {
 	h2 {
